// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`uglifyJsPlugin transforms correctly using "uglifyJsPlugin-0" data 1`] = `
"module.exports = {
    plugins: [],

    optimization: {
        minimize: true
    }
}
"
`;

exports[`uglifyJsPlugin transforms correctly using "uglifyJsPlugin-1" data 1`] = `
"const UglifyJsPlugin  = require('uglifyjs-webpack-plugin');
module.exports = {
    devtool: \\"source-map\\",
    plugins: [],

    optimization: {
        minimizer: [new UglifyJsPlugin({
            sourceMap: true,
            compress: {}
        })]
    }
}
"
`;

exports[`uglifyJsPlugin transforms correctly using "uglifyJsPlugin-2" data 1`] = `
"const Uglify  = require('uglifyjs-webpack-plugin');
module.exports = {
    devtool: \\"source-map\\",
    plugins: [],

    optimization: {
        minimizer: [new Uglify({
            sourceMap: true,
            compress: {}
        })]
    }
}
"
`;
